--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,6 @@ jobs:
     - name: build
       run: javac -d ./out/ -encoding utf-8 src/*.java
     - name: Package JAR
-      run: jar cfe ./eComp.jar Greeting ./out/*.class
+      run: jar cfe ./eComp.jar Main ./out/*.class
     - name: Run JAR
       run: java -jar ./eComp.jar 
